<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slampibot</name>
  <version>7.0.0</version>
  <description>ROS2 Humble Packages for slampibot</description>
  <maintainer email="edurobotailab@gmail.com">erail</maintainer>
  <license>Apache 2.0</license>
  <author email="leohycho@gamil.com">Leo Cho</author>  

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>slampibot_bringup</depend>
  <depend>slampibot_camera</depend>
  <depend>slampibot_description</depend>
  <depend>slampibot_cartographer</depend>
  <depend>slampibot_navigation2</depend>
  <depend>slampibot_teleop</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

