<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slampibot_teleop</name>
  <version>7.0.0</version>
  <description>ROS2 Humble Packages for Slampibot</description>
  <maintainer email="edurobotailab@gmail.com">erail</maintainer>
  <license>Apache 2.0</license>
  <author email="leohycho@gamil.com">Leo Cho</author>   

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

